# cookiecutter-hypermodern-python

./: cookiecutter.json
.github/workflows/: release.yml
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: constraints.txt  tests.yml
{{cookiecutter.project_name}}/docs/: conf.py
